--- a/css/style.css
+++ b/css/style.css
@@ -124,14 +124,16 @@ span {
   position: relative;
   display: inline-block;
   animation: aka 3s infinite ease alternate;
-  animation-delay: 3s;
+  animation-delay: 5s;
   margin: 0 40px;
   color: #fff;
   opacity: 0.1;
+  transform: scale(0.4);
   }
 @keyframes aka{
   100% {
-    opacity: 1;
+    opacity: 0.7;
+    transform: scale(1);
     color: #dc143c;
   }
 }
