--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ span {
   100% {
     opacity: 0.7;
     transform: scale(1);
-    color: #dc143c;
+    color: #57051560;
   }
 }
 #cta-header {
@@ -217,48 +217,27 @@ span {
   display: inline-block;
   color: #fff;
   text-align: left;
+  padding: 5px;
   opacity: 0.5;
-  line-height: 1.6;
-  animation: hero-span 10s ease infinite;
+  line-height: 1.3;
+  animation: hero-span 5s ease infinite;
   animation-delay: calc(.5s * var(--s));
   transition: all 3s;
   
 }
-@keyframes hero-span{
-  0%{
-    opacity: 0.6;
-  }
-  10%{
-    color: #dc143c73;
-    opacity: 0.7;
-    transform: rotate(3deg);
-    }
-    20%{
-      opacity: 1;
-      transform: rotate(-3deg);
-    }
-    30%{
-      transform: rotate(3deg);
-    }
-  40%{
-    opacity: 0.9;
-    transform: rotate(-3deg);
-    
-  }
-  50%{
-    transform: rotate(2deg);
-    color: #fff;
+
+@keyframes hero-span {
+  0% {}
+
+  10% {
+    color: #dc143cc7;
     opacity: 1;
+    transform: translateX(10px);
   }
-  60%{
-    transform: rotate(-2deg);
-  }
-  80%{
-    transform: rotate(1deg);
-  }
-  100%{
+
+  100% {
     opacity: 1;
-    transform: rotate(0deg);
+
   }
 }
 
