--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ span {
   position: relative;
   display: inline-block;
   animation: aka 3s infinite ease alternate;
-  animation-delay: 5s;
+  animation-delay: 3s;
   margin: 0 40px;
   color: #fff;
   opacity: 0.1;
@@ -217,7 +217,7 @@ span {
   display: inline-block;
   color: #fff;
   text-align: left;
-  padding: 5px;
+  padding: 2px;
   opacity: 0.5;
   line-height: 1.3;
   animation: hero-span 5s ease infinite;
@@ -230,9 +230,9 @@ span {
   0% {}
 
   10% {
-    color: #dc143cc7;
+    color: #dc143c8c;
     opacity: 1;
-    transform: translateX(10px);
+    transform: translateX(3px);
   }
 
   100% {
@@ -413,22 +413,19 @@ span {
 
 /*welcome-section*/
 #welcome-section {
-  background-image: url('../img/unit-3.jpg');
+  background-image: url('../img/unit-3.jpg') ;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 310%;
   background-position: right;
   position: relative;
   /*to allow overlay of this section*/
   z-index: 1;
   overflow: hidden;
-  animation: unit3 60s ease-in-out infinite ;
+  animation: unit3 40s ease-in-out infinite alternate ;
 }
 @keyframes unit3 {
-  50%{
-  background-position: left;
-  }
   100%{
-    background-position: right;
+  background-position: left;
   }
 }
 #welcome-section::after {
