--- a/css/style.css
+++ b/css/style.css
@@ -124,17 +124,17 @@ span {
   position: relative;
   display: inline-block;
   animation: aka 3s infinite ease alternate;
-  animation-delay: 3s;
+  animation-delay: 5s;
   margin: 0 40px;
   color: #fff;
-  opacity: 0.1;
-  transform: scale(0.4);
+  opacity: 0.2;
+  transform: scale(0.6);
   }
 @keyframes aka{
   100% {
-    opacity: 0.9;
-    transform: scale(1);
+    opacity: 0.7;
     color: #9c0b28a1;
+    transform: scale(1);
   }
 }
 #cta-header {
@@ -159,8 +159,9 @@ span {
   display: inline-block;
   color: #fff;
   font-size: 3rem;
+  font-weight: 700;
   animation: animate 3s ease-in-out infinite;
-  animation-delay: calc(0.2s * var(--i))
+  animation-delay: calc(8s + .2s * var(--i))
 }
 /* cta keyframes*/
 @keyframes animate{
@@ -220,8 +221,8 @@ span {
   padding: 2px;
   opacity: 0.5;
   line-height: 1.3;
-  animation: hero-span 5s ease infinite;
-  animation-delay: calc(.5s * var(--s));
+  animation: hero-span 6s ease infinite;
+  animation-delay: calc(2s + .5s * var(--s));
   transition: all 3s;
   
 }
@@ -413,7 +414,7 @@ span {
 
 /*welcome-section*/
 #welcome-section {
-  background-image: url('../img/unit-3.jpg') ;
+  background-image: url('../img/unit-3.jpg');
   background-repeat: no-repeat;
   background-size: 310%;
   background-position: right;
@@ -421,7 +422,7 @@ span {
   /*to allow overlay of this section*/
   z-index: 1;
   overflow: hidden;
-  animation: unit3 40s ease-in-out infinite alternate ;
+  animation: unit3 50s ease infinite alternate;
 }
 @keyframes unit3 {
   100%{
