--- a/css/style.css
+++ b/css/style.css
@@ -784,6 +784,7 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 30px;
 
 }
 
@@ -812,6 +813,7 @@ span {
   position: relative;
   border: 1px solid #333;
   border-radius: 10px;
+  margin-top: 20px;
 }
 img {
   height: 100%;
@@ -830,11 +832,18 @@ img {
   color:violet;
 }
 #cv{
-  font-size: 1.4em;
-  color: #dc143c;
+  font-size: 2em;
+  background: #dc143c;
+  color: #fff;
+  margin: 10px;
+  padding: 8px;
+  border: 3px solid #dc143c;
+  outline: 3px solid #fff;
+  transition: outline-offset 250ms ease;
 }
-#cv:hover{
-  color: violet;
+#cv:hover,
+#cv:focus{
+  outline-offset: -4px;
 }
 
 /*end of About Section*/
