--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ span {
   display: inline-block;
   padding: 10px 30px;
   background-color: #f7f2f227;
-  box-shadow: 5px 8px 5px #dc143c;
+  box-shadow: 15px 15px 5px #dc143c60;
   border-radius: 10px;
   margin: 30px 5px;
   width: 240px;
@@ -136,10 +136,12 @@ span {
 
 #cta-header:hover {
   transition:  all .8s;
-  box-shadow: 5px 8px 20px #dc143c;
+  box-shadow:  15px 15px 5px #dc143c;
   
 }
-
+#cta-header:hover span{
+  font-style: italic;
+}
 #cta-header span {
   position: relative;
   display: inline-block;
@@ -606,7 +608,7 @@ span {
     color: darkblue;
   }
  40%{
-  color: violet;
+  color: darkgreen;
 }
 60%{
   color: gray;
@@ -837,13 +839,23 @@ img {
   color: #fff;
   margin: 10px;
   padding: 8px;
+  box-shadow: 15px 15px 5px #26262671;
+  transition: color .5s;
   border: 3px solid #dc143c;
   outline: 3px solid #fff;
   transition: outline-offset 250ms ease;
+  animation: cv-button 2s ease-in-out infinite;
+}
+
+@keyframes cv-button {
+  50%{
+    outline-offset: -5px;
+  }
 }
 #cv:hover,
 #cv:focus{
-  outline-offset: -4px;
+  transition: .5s;
+  color: darkblue;
 }
 
 /*end of About Section*/
