--- a/css/style.css
+++ b/css/style.css
@@ -843,6 +843,7 @@ img {
   transition: color .5s;
   border: 3px solid #dc143c;
   outline: 3px solid #fff;
+  outline-offset: -3px;
   transition: outline-offset 250ms ease;
   animation: cv-button 2s ease-in-out infinite;
 }
