--- a/css/style.css
+++ b/css/style.css
@@ -823,6 +823,7 @@ span {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  
 
 }
 
@@ -847,9 +848,10 @@ span {
 
 #about .col-left .about-img {
   height: 100%;
-  width: 100%;
+  width: 90%;
   position: relative;
   border: 1px solid #333;
+  box-shadow: 15px 15px 5px #26262671;
   border-radius: 10px;
   margin-top: 20px;
 }
