--- a/css/style.css
+++ b/css/style.css
@@ -584,12 +584,12 @@ span {
   padding: 5px;
   font-size: 2em;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 3px;
   text-align: center;
   font-family: "Montserrat", sans-serif;
   box-shadow: 15px 15px 5px #26262671;
   transition: all .3s;
-
+  animation: shadow 2s ease-in-out infinite;
 }
 
 /* Dropdown button on hover & focus */
@@ -665,15 +665,23 @@ span {
   color: #fff;
   text-align: center;
   padding: 3px;
-  margin-bottom: 20px;
+  margin-bottom: 1.5em;
   font-size: 2.5rem;
   width: 60%;
-  border-radius: 5px;
-  transition: all .4s;
+  border-radius: 2px;
+  transition: all .3s;
   box-shadow: 15px 15px 5px #26262671;
-
-
+  animation: shadow 2s ease-in-out infinite;
 }
+
+@keyframes shadow {
+  50%{
+    box-shadow: 15px 15px 10px #26262671;
+    color: #ddd;
+    border-radius: 10px;
+  }
+}
+
 
 /* 
 .profile-link {
