--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ span {
 #aka span{
   position: relative;
   display: inline-block;
-  animation: aka 5s 2 ease alternate;
+  animation: aka 5s ease alternate;
   animation-delay: 5s;
   margin: 0 40px;
   color: #fff;
@@ -238,24 +238,23 @@ span {
   padding: 2px;
   opacity: 0.5;
   line-height: 1.3;
-  animation: hero-span 6s ease 2;
+  animation: hero-span 6s ease-in-out;
   animation-delay: calc(2s + .5s * var(--s));
   transition: all 3s;
   
 }
 
 @keyframes hero-span {
-  0% {}
+  5%{
+    opacity: 1;
 
+  }
   10% {
     color: #dc143c8c;
-    opacity: 1;
     transform: translateX(3px);
   }
-
   100% {
     opacity: 1;
-
   }
 }
 
