--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300&family=Philosopher:wght@700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -464,7 +464,7 @@ span {
   font-size: 4rem;
   position: relative;
   color: #eee;
-  
+  font-family: 'Philosopher', sans-serif;
 }
 
 /*End of welcome-section*/
@@ -1054,7 +1054,7 @@ img {
     background-size: 190%;
   }
   #welcome-section h1 {
-    font-size: 6rem;
+    font-size: 8rem;
   }
   #welcome-section .cta {
     font-size: 4rem;
