--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300&family=Philosopher:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300&family=Philosopher:wght@700&family=Shippori+Mincho+B1:wght@700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -70,13 +70,14 @@ span {
 
 .section-title {
   font-size: 4rem;
-  font-weight: 400;
+  font-weight: 500;
   max-width: 100vw;
   color: #000;
   margin-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   text-align: center;
+  
 }
 
 /* TEXT-REFLECT CSS */
@@ -229,13 +230,12 @@ span {
   height: auto;
 }
 .hero {
-  margin-left: 20px;
 }
 .hero h1 span{
   display: inline-block;
   color: #fff;
   text-align: left;
-  padding: 2px;
+  
   opacity: 0.5;
   line-height: 1.3;
   animation: hero-span 6s ease-in-out;
@@ -461,7 +461,7 @@ span {
 #welcome-section h1 {
   display: block;
   width: fit-content;
-  font-size: 4rem;
+  font-size: 4.8rem;
   position: relative;
   color: #eee;
   font-family: 'Philosopher', sans-serif;
