--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300&family=Philosopher:wght@700&family=Shippori+Mincho+B1:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300&family=Philosopher:wght@700&family=Shippori+Mincho+B1:wght@700&family=Gruppo&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -216,6 +216,7 @@ span {
   font-size: 2.9rem;
   text-transform: uppercase;
   color: #fff;
+  font-family: 'Gruppo', cursive;
 }
 
 
@@ -579,7 +580,7 @@ span {
   color: white;
   width: 80vw;
   padding: 5px;
-  font-size: 2em;
+  font-size: 2.5em;
   cursor: pointer;
   border-radius: 3px;
   text-align: center;
