--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ span {
   color: #fff;
   text-align: left;
   
-  opacity: 0.5;
+  opacity: 0.7;
   line-height: 1.3;
   animation: hero-span 6s ease-in-out;
   animation-delay: calc(2s + .5s * var(--s));
@@ -249,6 +249,7 @@ span {
 
   }
   10% {
+    opacity: 1;
     color: #dc143c8c;
     transform: translateX(3px);
   }
@@ -1089,7 +1090,9 @@ img {
   #skills .skills-item:hover {
     transform: scale(1.05);
   }
-
+  #skills .skills-item h2 {
+    font-size: 2.5rem;
+  }
   /*End of Service Section*/
 
   /*Project*/
