--- a/css/style.css
+++ b/css/style.css
@@ -935,23 +935,26 @@ img {
   width: 80%;
   padding: 20px;
   text-align: center;
+  border: 1px rgb(199, 196, 196) solid;
   border-radius: 10px;
   margin: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 0px 5px 0 #0000002c;
+  box-shadow: 10px 10px 6px 5px #35353521;
   transition: 0.4s ease;
   filter: grayscale(0.7);
 }
 
 #contact .contact-item:hover {
-  box-shadow: 0px 0px 4px 0px #dc143c;
-  border-radius: 30px;
+  box-shadow: 10px 10px 2px 5px #dc143c3d;
+  border: 1px #dc143c59 solid;
+    border-radius: 20px;
   background-color: #f4f4f4;
   color: #dc143c;
   filter: grayscale(0);
+  transform: scale(0.99);
 }
 
 #contact .icon {
@@ -1025,7 +1028,7 @@ img {
 
 #footer .social-item img:hover {
   filter: grayscale(0.7);
-  transform: translateY(-5px);
+  transform: scale(1.2);
 }
 
 #footer p {
@@ -1035,8 +1038,9 @@ img {
 
 /*bs12*/
   #bs21{
-    display: flex;
-    gap: 3rem;
+    width: 100%;
+    text-align: center;
+    font-size: 1.1rem;
   }
 /*end of bs12*/
 
