--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,7 @@ span {
   text-transform: uppercase;
   color: #fff;
   font-family: 'Gruppo', cursive;
+  text-shadow: 0 0 10px #dc143c;
 }
 
 
@@ -235,7 +236,7 @@ span {
   display: inline-block;
   color: #fff;
   text-align: left;
-  
+  text-shadow: 0 0 10px #dc143c;
   opacity: 0.7;
   line-height: 1.3;
   animation: hero-span 6s ease-in-out;
@@ -253,6 +254,7 @@ span {
     opacity: 1;
     color: #dc143c8c;
     transform: translateX(3px);
+    text-shadow: 0 0 1px #fff;
   }
   100% {
     opacity: 1;
@@ -309,6 +311,8 @@ span {
   letter-spacing: 0.2rem;
   text-decoration: none;
   color: #fff;
+  text-shadow: 0 0 7px #fff;
+
   text-transform: uppercase;
   padding: 20px;
   display: block;
@@ -1241,6 +1245,13 @@ img {
     background-position: bottom left;
   }
 } 
+.brand h1{
+  font-size: 4rem;
+}
+
+#header .nav-list ul a:hover {
+  text-shadow: 0 0 2px #fff;
+}
   #hero-h1{
     display: flex;
     flex-direction: column;
@@ -1281,7 +1292,8 @@ img {
   }
 
   #header .nav-list ul li a {
-    font-size: 1.8rem;
+    font-size: 2rem;
+    text-shadow: 0 0 10px #dc143c;
   }
 
   #header .nav-list ul a:after {
