--- a/css/style.css
+++ b/css/style.css
@@ -161,8 +161,8 @@ span {
   position: relative;
   display: inline-block;
   padding: 10px 30px;
-  background-color: #85848498;
-  box-shadow: 35px 10px 10px #dc143c63;
+  background-color: #85848462;
+  box-shadow: 5px 10px 10px #dc143c63;
   border-radius: 10px;
   margin: 30px 5px;
   width: 240px;
@@ -170,11 +170,31 @@ span {
   transition: 3s ease-in-out;
   transition-property: color;
 }
-
+#cta-header::before{
+  content: '';
+  position: absolute;
+  bottom: -40px;
+  left: 5%;
+  width: 90%;
+  height: 20px;
+  border-radius: 50%;
+  background: #e4dedf36;
+  filter: blur(5px);
+  animation: shadowButton 3s linear infinite;
+  animation-delay: 6.5s;
+}
+@keyframes shadowButton {
+  40%{
+    background: #dc143c;
+    filter: blur(5px);
+  }
+}
 #cta-header:hover {
-  background-color: #f7f2f286;
+  background: transparent;
   transition:  all .8s;
-  box-shadow:  10px 5px 5px #ce0d3498;
+  box-shadow: inset 0px 0px 20px #ce0d34b9,
+                    0px 0px 30px rgba(255, 255, 255, 0.61);
+  filter: blur(0);
   
 }
 #cta-header:hover span{
