--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,9 @@ span {
   width: 80px;
   margin-bottom: 20px;
 }
+#github-icon img{
+  border-radius: 50%;
+}
 
 /*Dropdown*/
 /* Dropdown Button */
