changed and added border-radius to git skill item

--- a/css/style.css
+++ b/css/style.css
@@ -602,7 +602,9 @@ span {
 #github-icon img{
   border-radius: 50%;
 }
-
+#git-icon img{
+  border-radius: 50%;
+}
 /*Dropdown*/
 /* Dropdown Button */
 .dropbtn {
