--- a/css/style.css
+++ b/css/style.css
@@ -666,14 +666,29 @@ span {
 
 #projects .projects {
   flex-direction: column;
-  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   padding: 100px 0;
+  background-image: url('/img/guillermo-ferla-e4Yv_AWY2W4-unsplash.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+  background-attachment: fixed;
+  position: relative;
+}
+
+.projects-header{
+  width: 100%;
+  height: 170px;
+  background: rgb(255, 255, 255);
+  margin-bottom: 50px;
 }
 
 #projects .projects-header h1 {
   margin-bottom: 50px;
 }
+
+
 #projects-h1 span{
   animation:projact 5s infinite ease;
 }
@@ -694,6 +709,7 @@ span {
     color: #000;
   }
 }
+
 
 #profile-link{
   color: #fff;
@@ -1170,7 +1186,7 @@ img {
   #projects .project-item {
     height: 400px;
     margin: 0;
-    width: 100%;
+    width: 90%;
     border-radius: 0;
   }
 
