--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ span {
   width: 100%;
   margin: 0 auto;
   padding: 100px 0;
-  background-image: url('/img/guillermo-ferla-e4Yv_AWY2W4-unsplash.jpg');
+  background-image: url('../img/guillermo-ferla-e4Yv_AWY2W4-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -982,7 +982,7 @@ img {
   width: 100%;
   margin: 0 auto;
   padding: 100px 0;
-  background-image: url('/img/tim-foster-BeDY9KuP0sI-unsplash.jpg');
+  background-image: url('../img/tim-foster-BeDY9KuP0sI-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
