--- a/css/style.css
+++ b/css/style.css
@@ -648,7 +648,12 @@ span {
   z-index: 1;
   justify-content: center;
   align-items: center;
-  
+  background-image: url('../img/charles-deluvio-HTDVSbFsy3U-unsplash.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+  background-attachment: fixed;
+  position: relative;
 }
 
 
@@ -685,7 +690,7 @@ span {
   height: 100%;
   width: 100%;
   background-color: #000;
-  opacity: 0;
+  opacity: 0.2;
   overflow: hidden;
 }
 
