--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,8 @@ span {
   text-align: center;
   max-width: 1500px;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px 0 0 0;
+  
 }
 
 #skills .skills-top {
