--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@ span {
   text-align: center;
   max-width: 1500px;
   margin: 0 auto;
-  padding: 100px 0 0 0;
+  padding: 100px 0;
   
 }
 
@@ -675,7 +675,7 @@ span {
   width: 100%;
   margin: 0 auto;
   padding: 100px 0;
-  background-image: url('../img/kobu-agency-0mletxmBcVQ-unsplash.jpg');
+  background-image: url('../img/tim-foster-BeDY9KuP0sI-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
