--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300&family=Philosopher:wght@700&family=Shippori+Mincho+B1:wght@700&family=Gruppo&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -16,10 +17,12 @@ html {
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
 }
+
 /*bootstrap scrollbar*/
-.custom-scrollbar-js{
+.custom-scrollbar-js {
   height: 200px;
 }
+
 /*end of bootstrap scrollbar*/
 
 /*progress bar*/
@@ -77,18 +80,22 @@ span {
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   text-align: center;
-  
+
 }
 
 /* TEXT-REFLECT CSS */
 
-.section-title, .section-title:before, .text-reflect.section-title span {
+.section-title,
+.section-title:before,
+.text-reflect.section-title span {
   display: block;
   margin: 0;
   padding: 0;
 }
 
-.section-title, .section-title:before, .section-title:after {
+.section-title,
+.section-title:before,
+.section-title:after {
   position: relative;
 }
 
@@ -100,7 +107,7 @@ span {
   content: attr(data-text);
   top: 2.1em;
   transform: scale(1, -1);
-  backface-visibility: visible; 
+  backface-visibility: visible;
   z-index: 1;
 }
 
@@ -110,10 +117,11 @@ span {
   top: -10px;
   left: 0;
   width: 100%;
-  height: 60px; 
+  height: 60px;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.589) 0%, rgb(255, 255, 255) 50%);
   z-index: 2;
 }
+
 /* END OF TEXT-REFLECT CSS */
 
 .section-title span {
@@ -123,24 +131,29 @@ span {
   height: 5px;
 }
 
-@keyframes section-span{
-  0%, 100%{
+@keyframes section-span {
+
+  0%,
+  100% {
     top: 0px;
     opacity: 1;
     color: #dc143c;
   }
-  45%{
+
+  45% {
     top: -20px;
     opacity: 0;
     color: darkblue;
-  } 
-  46%{
+  }
+
+  46% {
     top: 20px;
     opacity: 0;
     color: darkblue;
   }
 }
-#aka span{
+
+#aka span {
   position: relative;
   display: inline-block;
   animation: aka 5s ease alternate;
@@ -149,14 +162,16 @@ span {
   color: #fff;
   opacity: 0.5;
   transform: scale(0.7);
-  }
-@keyframes aka{
+}
+
+@keyframes aka {
   50% {
     opacity: 1;
     transform: scale(1);
     color: tomato;
   }
 }
+
 #cta-header {
   position: relative;
   display: inline-block;
@@ -170,7 +185,8 @@ span {
   transition: 3s ease-in-out;
   transition-property: color;
 }
-#cta-header::before{
+
+#cta-header::before {
   content: '';
   position: absolute;
   bottom: -40px;
@@ -183,53 +199,62 @@ span {
   animation: shadowButton 3s linear infinite;
   animation-delay: 6.5s;
 }
+
 @keyframes shadowButton {
-  40%{
+  40% {
     background: #dc143c;
     filter: blur(5px);
   }
 }
+
 #cta-header:hover {
   background: transparent;
-  transition:  all .8s;
+  transition: all .8s;
   box-shadow: inset 0px 0px 20px #ce0d34b9,
-                    0px 0px 30px rgba(255, 255, 255, 0.61);
+    0px 0px 30px rgba(255, 255, 255, 0.61);
   filter: blur(0);
-  
+
 }
-#cta-header:hover span{
+
+#cta-header:hover span {
   transform: scale(1.1);
 }
+
 #cta-header span {
   position: relative;
   display: inline-block;
   color: #fff;
-  
+
   font-size: 3.5rem;
   font-weight: 700;
   animation: animate 3s ease-in-out infinite;
   animation-delay: calc(6s + .2s * var(--i))
 }
+
 /* cta keyframes*/
-@keyframes animate{
-  0%{
-      transform: translateY(0px);
-      
+@keyframes animate {
+  0% {
+    transform: translateY(0px);
+
   }
-  20%{      
-      transform: translateY(-5px);
-      color: #cd143c;
-      background: linear-gradient(0deg, #000, #dc143c, #ff0000, #000);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-transform: uppercase;
-      box-shadow: none;
-    }
-  40%, 100%{
-      transform: translateY(0);
-      
+
+  20% {
+    transform: translateY(-5px);
+    color: #cd143c;
+    background: linear-gradient(0deg, #000, #dc143c, #ff0000, #000);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-transform: uppercase;
+    box-shadow: none;
+  }
+
+  40%,
+  100% {
+    transform: translateY(0);
+
   }
 }
+
 /*end of cta keyframes*/
 
 
@@ -252,7 +277,8 @@ span {
   width: 100vw;
   height: auto;
 }
-.hero h1 span{
+
+.hero h1 span {
   display: inline-block;
   color: #fff;
   text-align: left;
@@ -262,20 +288,22 @@ span {
   animation: hero-span 6s ease-in-out;
   animation-delay: calc(1s + .5s * var(--s));
   transition: all 3s;
-  
+
 }
 
 @keyframes hero-span {
-  5%{
+  5% {
     opacity: 1;
 
   }
+
   10% {
     opacity: 1;
     color: #dc143c8c;
     transform: translateX(3px);
     text-shadow: 0 0 1px #fff;
   }
+
   100% {
     opacity: 1;
   }
@@ -372,6 +400,7 @@ span {
   transform: scale(0.8);
   margin: 3px 20px;
 }
+
 /*hamburger pulse*/
 #header .hamburger:after {
   position: absolute;
@@ -382,6 +411,7 @@ span {
   border: 2px solid #fff;
   animation: ham-pulse 2s ease infinite;
 }
+
 #header .hamburger:before {
   position: absolute;
   content: "";
@@ -392,26 +422,28 @@ span {
   animation: ham-pulse2 2s ease infinite;
   animation-delay: .6s;
 }
+
 @keyframes ham-pulse {
-  50%{
-    border-color: #fff;  
+  50% {
+    border-color: #fff;
 
   }
-  100%{
-  opacity: 0;
-  transform: scale(1.4);
-}
+
+  100% {
+    opacity: 0;
+    transform: scale(1.4);
+  }
 }
 
 @keyframes ham-pulse2 {
-    50%{  
+  50% {}
 
-    }
-    100%{
+  100% {
     opacity: 0;
     transform: scale(1.3);
   }
 }
+
 /*End of hamburger pulse*/
 
 #header .hamburger .bar {
@@ -465,11 +497,13 @@ span {
   overflow: hidden;
   animation: unit3 60s ease infinite alternate;
 }
+
 @keyframes unit3 {
-  100%{
-  background-position: right;
+  100% {
+    background-position: right;
   }
 }
+
 #welcome-section::after {
   content: "";
   position: absolute;
@@ -501,7 +535,7 @@ span {
   text-align: center;
   max-width: 1500px;
   margin: 0 auto;
-  
+
 }
 
 #skills .skills-top {
@@ -536,23 +570,24 @@ span {
   overflow: hidden;
   border-radius: 10px;
   height: 300px;
-  
+
   /*border radius not visiblie without hidden overflow*/
 }
 
 
 
-#skills .skills-item li{
+#skills .skills-item li {
   color: #fff;
   font-size: 1.4rem;
   text-align: left;
   margin: 20px;
-  
+
 }
 
 #skills .skills-item a {
   color: rgb(5, 255, 5);
 }
+
 /*overlay added to create contrast*/
 #skills .skills-item::after {
   content: "";
@@ -578,8 +613,6 @@ span {
   margin-bottom: 10px;
   text-transform: capitalize;
   font-family: 'Gruppo', cursive;
-
-  
 }
 
 #skills .skills-item {
@@ -587,9 +620,9 @@ span {
 }
 
 #skills .skills-top {
-  
   width: 90%;
 }
+
 #skills .skills-item p {
   color: #fff;
   text-align: center;
@@ -600,15 +633,19 @@ span {
   width: 80px;
   margin-bottom: 20px;
 }
-#git-icon img{
+
+#git-icon img {
   border-radius: 50%;
 }
-#netlify-icon img{
+
+#netlify-icon img {
   border-radius: 50%;
 }
-#express-icon img{
+
+#express-icon img {
   border-radius: 30px;
 }
+
 /*Dropdown*/
 /* Dropdown Button */
 .dropbtn {
@@ -635,11 +672,13 @@ span {
   margin: 0 auto;
 }
 
-.dropbtn:hover, .dropbtn:focus {
+.dropbtn:hover,
+.dropbtn:focus {
   background: var(--overlay);
   box-shadow: 15px 15px 10px #26262671;
 
 }
+
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
@@ -655,6 +694,7 @@ span {
   background-attachment: fixed;
   position: relative;
 }
+
 .dropdown-content::after {
   content: "";
   position: absolute;
@@ -669,10 +709,15 @@ span {
 
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+.dropdown-content a:hover {
+  background-color: #ddd
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+  display: block;
+}
+
 /*end of Dropdown*/
 
 /*End of Skills Section*/
@@ -683,9 +728,9 @@ span {
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 100px 0 ;
+  padding: 100px 0;
   background-image: url('../img/charles-deluvio-HTDVSbFsy3U-unsplash.jpg');
-  
+
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -705,7 +750,7 @@ span {
   overflow: hidden;
 }
 
-.projects-header{
+.projects-header {
   width: 100%;
   height: 170px;
   background: rgb(255, 255, 255);
@@ -718,9 +763,10 @@ span {
 }
 
 
-#projects-h1 span{
-  animation:projact 5s infinite ease;
+#projects-h1 span {
+  animation: projact 5s infinite ease;
 }
+
 @keyframes projact {
   20% {
     color: darkblue;
@@ -740,7 +786,7 @@ span {
 }
 
 
-#profile-link{
+#profile-link {
   color: #fff;
   width: 100%;
   background: linear-gradient(0deg, #dc134c, #333);
@@ -753,7 +799,7 @@ span {
   border-radius: 2px;
   transition: all .3s;
   box-shadow: 15px 15px 5px #26262671;
-  
+
   animation: shadow 2s ease-in-out infinite;
 }
 
@@ -779,8 +825,8 @@ span {
   transition: all .4s;
 } */
 
-#profile-link:hover{
-  transition: .2s ease-in-out ;
+#profile-link:hover {
+  transition: .2s ease-in-out;
   border-radius: 10px;
   color: #ccc;
   box-shadow: 15px 15px 10px #26262671;
@@ -807,7 +853,7 @@ span {
 }
 
 #projects .project-tile {
-  padding: 30px ;
+  padding: 30px;
   flex-basis: 50%;
   height: 100%;
   line-height: 1.9rem;
@@ -830,10 +876,10 @@ span {
   line-height: 1em;
   padding-bottom: 10px;
   border-bottom: 1px dashed #fff;
-  
-  background: linear-gradient(0deg , #b9b6b6, #fff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+
+  background: linear-gradient(0deg, #b9b6b6, #fff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 
@@ -856,11 +902,13 @@ span {
   border-radius: 10px;
   animation: project-link 2s linear infinite;
 }
-@keyframes project-link{
-  50%{
+
+@keyframes project-link {
+  50% {
     color: #ddd;
   }
 }
+
 #projects .project-tile a:hover {
   transition: 0.4s ease;
   color: crimson;
@@ -883,17 +931,20 @@ span {
   background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
   opacity: 0.6;
 }
-.tech-list{
+
+.tech-list {
   display: inline-flex;
 
 }
-.tech-list li{
+
+.tech-list li {
   color: yellowgreen;
   list-style: none;
   margin: 5px;
   padding: 5px;
   font-size: 1.2em;
 }
+
 /*image transition on hover*/
 #projects .project-img img {
   transition: 0.5s ease;
@@ -922,7 +973,7 @@ span {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
-  
+
 }
 
 #about .col-right {
@@ -955,11 +1006,13 @@ span {
   margin-top: 20px;
   transition: all .3s;
 }
+
 #about .col-left .about-img:hover {
   box-shadow: 5px 5px 0px 1px #dc143ca2;
   border: 1px #dc143c solid;
   filter: grayscale(0);
 }
+
 img {
   height: 100%;
   width: 100%;
@@ -968,15 +1021,18 @@ img {
 
 #about .col-left img {
   margin: 0px auto;
-    border-radius: 10px;
+  border-radius: 10px;
 }
-.fcc-link{
+
+.fcc-link {
   color: #dc143c;
 }
-.fcc-link:hover{
-  color:violet;
+
+.fcc-link:hover {
+  color: violet;
 }
-#cv{
+
+#cv {
   font-size: 1.6em;
   background: #dc143c;
   color: #fff;
@@ -992,13 +1048,14 @@ img {
 }
 
 @keyframes cv-button {
-  50%{
+  50% {
     outline-offset: -6px;
     box-shadow: 15px 15px 10px #26262671;
   }
 }
+
 #cv:hover,
-#cv:focus{
+#cv:focus {
   transition: .3s;
   color: darkblue;
   box-shadow: 15px 15px 10px #26262671;
@@ -1034,7 +1091,7 @@ img {
 
 }
 
-.contact-header{
+.contact-header {
   width: 100%;
   height: auto;
   background: rgb(255, 255, 255);
@@ -1067,7 +1124,7 @@ img {
 #contact .contact-item:hover {
   box-shadow: 3px 3px 0px 1px #dc143c75;
   border: 1px #dc143c solid;
-    border-radius: 20px;
+  border-radius: 20px;
   background-color: #f4f4f4;
   color: #dc143c;
   filter: grayscale(0);
@@ -1098,15 +1155,18 @@ img {
 #footer {
   background-image: var(--overlay);
 }
-#bs21 ul{
+
+#bs21 ul {
   display: flex;
   gap: 3em;
   font-size: 1.3rem;
   color: #fff;
 }
-#bs21 li{
+
+#bs21 li {
   list-style: none;
 }
+
 #footer .footer {
   min-height: 200px;
   flex-direction: column;
@@ -1154,11 +1214,12 @@ img {
 }
 
 /*bs12*/
-  #bs21{
-    width: 100%;
-    text-align: center;
-    font-size: 1.1rem;
-  }
+#bs21 {
+  width: 100%;
+  text-align: center;
+  font-size: 1.1rem;
+}
+
 /*end of bs12*/
 
 /*End of Footer*/
@@ -1170,35 +1231,44 @@ img {
 /*Media Query for tablet*/
 @media only screen and (min-width: 768px) {
   h1.section-title {
-    font-size: 6rem}
-  
+    font-size: 6rem
+  }
+
   /*Hero*/
   #welcome-section {
     background-size: 190%;
   }
+
   #welcome-section h1 {
     font-size: 8rem;
   }
+
   #welcome-section .cta {
     font-size: 4rem;
   }
-  #hero-h1{
+
+  #hero-h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  #hero-h1 h1{
+
+  #hero-h1 h1 {
     padding-top: 20px;
   }
-  #cta-header span{
+
+  #cta-header span {
     font-size: 5.4rem;
   }
+
   #cta-header {
     width: auto;
   }
-#aka span{
-  font-size: 4rem;
-}
+
+  #aka span {
+    font-size: 4rem;
+  }
+
   /*End of Hero*/
 
   /*Skills Section*/
@@ -1208,41 +1278,51 @@ img {
     margin: 2.5%;
     height: 240px;
   }
+
   #skills .skills-item:hover {
     transform: scale(1.05);
   }
+
   #skills .skills-item h2 {
     font-size: 2.5rem;
   }
+
   /*End of Service Section*/
 
   /*Project*/
-  
+
   #projects .project-item {
     flex-direction: row;
   }
-  #projects .project-tile a{
+
+  #projects .project-tile a {
     color: #eee;
     border-radius: 0px;
   }
+
   #projects .project-tile a:hover {
     border-radius: 10px;
   }
+
   #projects .project-item:nth-child(even) {
     flex-direction: row-reverse;
   }
+
   #projects .project-tile h1 {
     font-size: 4rem;
     font-weight: 600;
   }
+
   #projects .project-tile h2 {
     font-size: 2rem;
     font-weight: 400;
     line-height: 1.5em;
   }
+
   #projects .project-tile p {
     font-size: 1.4rem;
   }
+
   #projects .project-item {
     height: 400px;
     margin: 0;
@@ -1285,6 +1365,7 @@ img {
   .camp_hub {
     flex-direction: row;
   }
+
   .profile-link {
     padding: 5px;
     margin: 5px;
@@ -1340,49 +1421,58 @@ img {
 
 /*Media Query for Desktop*/
 @media only screen and (min-width: 1024px) {
-  
-  .hero{
+
+  .hero {
     text-align: center;
   }
+
   #welcome-section {
     background-size: cover;
     background-position: top right;
     animation: unit3 56s ease-in-out infinite alternate;
-}
-@keyframes unit3 {
-  100%{
-    background-position: bottom left;
   }
-} 
-.brand h1{
-  font-size: 4rem;
-}
 
-#header .nav-list ul a:hover {
-  text-shadow: 0 0 2px #fff;
-}
-  #hero-h1{
+  @keyframes unit3 {
+    100% {
+      background-position: bottom left;
+    }
+  }
+
+  .brand h1 {
+    font-size: 4rem;
+  }
+
+  #header .nav-list ul a:hover {
+    text-shadow: 0 0 2px #fff;
+  }
+
+  #hero-h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 6rem;
 
   }
-  #hero-h1 h1{
+
+  #hero-h1 h1 {
     padding-top: 20px;
   }
+
   h1.section-title {
     font-size: 6rem;
   }
-  #cta-header span{
+
+  #cta-header span {
     font-size: 5rem;
   }
-#aka span{
-  font-size: 4rem;
-}
+
+  #aka span {
+    font-size: 4rem;
+  }
+
   /*Hero*/
-  
-  
+
+
   /*header*/
   #header .hamburger {
     display: none;
@@ -1415,25 +1505,30 @@ img {
     margin: 1.5%;
     height: 300px;
   }
-  #skills .skills-top p{
+
+  #skills .skills-top p {
     text-align: center;
     width: 80%;
-    margin:  auto;
+    margin: auto;
   }
-  #skills .skills-item{
+
+  #skills .skills-item {
     filter: grayscale(0.6);
   }
+
   #skills .skills-item:hover {
     filter: grayscale(0);
     transform: scale(1.05);
-  
+
   }
+
   #skills .skills-item h2 {
     font-size: 3rem;
   }
-#skills .skills-item ul li{
-  font-size: 1.7rem;
-}
+
+  #skills .skills-item ul li {
+    font-size: 1.7rem;
+  }
 
   .container p {
     font-size: 1.8rem;
@@ -1449,20 +1544,25 @@ img {
     padding: 20px;
     margin: 20px auto;
   }
+
   /*about*/
   .profile-link {
     font-size: 2.2rem;
   }
+
   .camp_hub {
     justify-content: space-evenly;
   }
 }
-.tech-list li{
+
+.tech-list li {
   font-size: 1.3em;
 }
-#footer .social-item{
+
+#footer .social-item {
   margin: 0 10px;
 }
+
 /*End of Media Query for Desktop*/
 
 /*Media Query for small devices*/
