--- a/css/style.css
+++ b/css/style.css
@@ -512,7 +512,7 @@ span {
   height: 100vh;
   width: 100vw;
   background-color: #000;
-  opacity: 0.7;
+  opacity: 0.6;
   z-index: -1;
   overflow: hidden;
 }
@@ -535,20 +535,47 @@ span {
   text-align: center;
   max-width: 1500px;
   margin: 0px auto;
-  padding:  0;
+  padding:  150px 0;
+
+  background-image: url('../img/charles-deluvio-HTDVSbFsy3U-unsplash.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+  background-attachment: fixed;
+  position: relative;
+  padding-bottom: 50px;
 }
 
+#skills .skills::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #000;
+  opacity: 0.2;
+  overflow: hidden;;
+}
 
-
-/* .skills-header{
+.skills-header{
   width: 100%;
   background: #fff;
-  } */
+  height: 100%;
+  z-index: 1;
+}
 
 #skills .skills-top {
   width: 500px;
   margin: 20px auto;
   text-align: center;
+  z-index: 30;
+  background: rgba(255, 255, 255, 0.89);
+  border-radius: 10px;
+  padding: 5px;
+}
+.skills-top p{
+  font-weight: 600;
 }
 
 #skills .skills-bottom {
@@ -680,6 +707,7 @@ span {
 .dropdown {
   position: relative;
   margin: 0 auto;
+  z-index: 4;
 }
 
 .dropbtn:hover,
@@ -810,7 +838,7 @@ span {
   border-radius: 2px;
   transition: all .3s;
   box-shadow: 15px 15px 5px #26262671;
-  border: 1px solid #000;
+  border: 2px solid #000;
   animation: shadow 2s ease-in-out infinite;
 }
 
@@ -1307,6 +1335,7 @@ img {
 
   #projects .project-item {
     flex-direction: row;
+    border: 1px solid #ddd;
   }
 
   #projects .project-tile a {
