--- a/css/style.css
+++ b/css/style.css
@@ -537,16 +537,16 @@ span {
   margin: 0px auto;
   padding:  150px 0;
 
-  background-image: url('../img/charles-deluvio-HTDVSbFsy3U-unsplash.jpg');
+  /* background-image: url('../img/charles-deluvio-HTDVSbFsy3U-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
   background-attachment: fixed;
   position: relative;
-  padding-bottom: 50px;
+  padding-bottom: 50px; */
 }
 
-#skills .skills::after {
+/* #skills .skills::after {
   content: "";
   position: absolute;
   left: 0;
@@ -556,14 +556,14 @@ span {
   background-color: #000;
   opacity: 0.2;
   overflow: hidden;;
-}
+} */
 
-.skills-header{
+/* .skills-header{
   width: 100%;
   background: #fff;
   height: 100%;
   z-index: 1;
-}
+} */
 
 #skills .skills-top {
   width: 500px;
@@ -574,9 +574,9 @@ span {
   border-radius: 10px;
   padding: 5px;
 }
-.skills-top p{
+/* .skills-top p{
   font-weight: 600;
-}
+} */
 
 #skills .skills-bottom {
   display: flex;
