--- a/css/style.css
+++ b/css/style.css
@@ -73,13 +73,14 @@ span {
 
 .section-title {
   font-size: 4rem;
-  font-weight: 400;
+  font-weight: 500;
   max-width: 100vw;
   color: #000;
   margin-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   text-align: center;
+  
 
 }
 
@@ -536,34 +537,8 @@ span {
   max-width: 1500px;
   margin: 0px auto;
   padding:  100px 0;
-
-  /* background-image: url('../img/charles-deluvio-HTDVSbFsy3U-unsplash.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: left;
-  background-attachment: fixed;
-  position: relative;
-  padding-bottom: 50px; */
 }
 
-/* #skills .skills::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #000;
-  opacity: 0.2;
-  overflow: hidden;;
-} */
-
-/* .skills-header{
-  width: 100%;
-  background: #fff;
-  height: 100%;
-  z-index: 1;
-} */
 
 #skills .skills-top {
   width: 500px;
@@ -693,7 +668,8 @@ span {
   box-shadow: 15px 15px 5px #26262671;
   transition: all .3s;
   animation: shadow 2s ease-in-out infinite;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Gruppo', cursive;
+
 }
 
 /* Dropdown button on hover & focus */
@@ -830,12 +806,15 @@ span {
   padding: 3px;
   margin-bottom: 1.5em;
   font-size: 2.5rem;
+  font-weight: 600;
   width: 60%;
   border-radius: 2px;
   transition: all .3s;
   box-shadow: 15px 15px 5px #26262671;
   border: 2px solid #000;
   animation: shadow 2s ease-in-out infinite;
+  font-family: 'Gruppo', cursive;
+
 }
 
 @keyframes shadow {
@@ -1153,7 +1132,7 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 10px 10px 6px 5px #cc09092f;
+  box-shadow: 10px 10px 6px 5px #cec6c62f;
   transition: 0.4s ease;
   filter: grayscale(0.7);
 }
