testing new projects section image

--- a/css/style.css
+++ b/css/style.css
@@ -744,7 +744,7 @@ span {
 
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: left;
+  background-position: center;
   background-attachment: fixed;
   position: relative;
 }
