--- a/css/style.css
+++ b/css/style.css
@@ -538,7 +538,7 @@ span {
   margin: 0px auto;
   padding:  100px 0;
 
-  background-image: url('../img/milky-way2.jpg');
+  background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1044,7 +1044,7 @@ span {
   z-index: 20;
   background: #fff;
   border-radius: 5px;
-  border: 1px solid #dc143c;
+  border: 1px solid #ddd;
 }
 
 #about .col-right h2 {
